[tool.poetry]
name = "stargazer"
version = "0.1.0"
description = "Github Readme Crawler for CommonSense Search Engine"
authors = ["Daniil Larionov <dslarionov@isa.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.43"
Markdown = "^3.1"
httpx = "^0.6.8"
pandas = "^0.25.0"
tables = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
